--- a/dns_projet/pom.xml
+++ b/dns_projet/pom.xml
@@ -3,4 +3,17 @@
   <groupId>Roman_Olivier</groupId>
   <artifactId>dns_projet</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+  <dependencies>
+  	<dependency>
+  		<groupId>org.glassfish.tyrus</groupId>
+  		<artifactId>tyrus-server</artifactId>
+  		<version>1.13.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.tyrus</groupId>
+  		<artifactId>tyrus-container-grizzly-server</artifactId>
+  		<version>1.13.1</version>
+  	</dependency>
+  </dependencies>
 </project>
