--- a/dns_projet/pom.xml
+++ b/dns_projet/pom.xml
@@ -1,19 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Roman_Olivier</groupId>
-  <artifactId>dns_projet</artifactId>
+  <groupId>test</groupId>
+  <artifactId>test2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
   <dependencies>
-  	<dependency>
-  		<groupId>org.glassfish.tyrus</groupId>
-  		<artifactId>tyrus-server</artifactId>
-  		<version>1.13.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.glassfish.tyrus</groupId>
-  		<artifactId>tyrus-container-grizzly-server</artifactId>
-  		<version>1.13.1</version>
-  	</dependency>
-  </dependencies>
+  <dependency>
+    <groupId>org.glassfish.tyrus</groupId>
+    <artifactId>tyrus-server</artifactId>
+    <version>1.13.1</version>
+</dependency>
+
+<dependency>
+    <groupId>org.glassfish.tyrus</groupId>
+    <artifactId>tyrus-container-grizzly-server</artifactId>
+    <version>1.13.1</version>
+</dependency>
+</dependencies>
 </project>
+
