--- a/dns_projet/.classpath
+++ b/dns_projet/.classpath
@@ -31,17 +31,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/javax.websocket_1.0.0.v20140310-1603.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-server-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-client-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-container-glassfish-cdi-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-container-grizzly-client-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-container-servlet-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-core-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/websocket-ri-archive-1.12/lib/tyrus-spi-1.12.jar"/>
-	<classpathentry kind="lib" path="/Users/olivier/Downloads/WebSockets_Tyrus_1_15.Java.Maven.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
