--- a/dns_projet/pom.xml
+++ b/dns_projet/pom.xml
@@ -40,5 +40,11 @@
 			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
+                <dependency>
+                <groupId>org.glassfish.tyrus.bundles</groupId>
+                <artifactId>tyrus-standalone-client</artifactId>
+                  <version>1.9</version>
+                </dependency>
+
 	</dependencies>
 </project>
