--- a/dns_projet/pom.xml
+++ b/dns_projet/pom.xml
@@ -2,53 +2,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>Roman_Olivier</groupId>
+    <groupId>com.Roman_Olivier</groupId>
     <artifactId>dns_project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
-
-        <dependency>
-            <groupId>com.sun.jndi</groupId>
-            <artifactId>dns</artifactId>
-            <version>1.2</version>
-            <type>pom</type>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-container-servlet</artifactId>
-            <version>1.12</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-client</artifactId>
-            <version>1.12</version>
-        </dependency>
-		
-        <!-- https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-server -->
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-server</artifactId>
-            <version>1.17</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
+        <!-- Dependency is managed through ver. 1.15:       
         <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
             <version>1.1</version>
-            <scope>provided</scope>
         </dependency>
+        -->
+        <!-- https://tyrus-project.github.io/documentation/1.12/user-guide.html#standalone-mode: -->
         <dependency>
-            <groupId>org.glassfish.tyrus.bundles</groupId>
-            <artifactId>tyrus-standalone-client</artifactId>
-            <version>1.9</version>
-        </dependency> 
+            <groupId>org.glassfish.tyrus</groupId>
+            <artifactId>tyrus-server</artifactId>
+            <version>1.15</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-container-grizzly-server</artifactId>
             <version>1.15</version>
-        </dependency>              
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.4</version>
+        </dependency>
     </dependencies>
+
 </project>
